--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
             h1{margin: 0; padding: 0;}
             header button{padding: 5px; border: 0; outline: 0; background: rgb(243, 204, 32); width: 80px;}
 
+            .rec{display: inline-block; margin-left: 10px; font-size: 16px; background: linear-gradient(transparent 50% , #0ff 0);}
+
             .wrapper{padding: 0 10px;}
 
             .question > span{display: inline-block; font-size: 24px; transform-origin: 0 0;}
 
+            .ex-list{padding-left: 22px;}
             .ex-list.hidden{display: none;}
-            .ex-list li{margin-bottom: 5px; font-size: 20px; cursor: pointer;}
+            .ex-list li{margin-bottom: 15px; font-size: 20px; cursor: pointer;}
         </style>
         
      </head>
@@ -102,7 +105,7 @@
                 t.guess = function(target){
                     if(!t.startTime) return;
                     if(t.q === target.innerText){
-                        if(t.qLevel == 1){
+                        if(t.qLevel == 3){
                             t.result(true);
                             return;
                         }
@@ -164,8 +167,11 @@
                 }
 
                 t.result = function(bool){
+                    t.endTime = new Date().getTime();
+                    lv.innerHTML += '<span class="rec">' + ((t.endTime - t.startTime) / 1000) + '초</span>';
                     guide.innerHTML = '게임이 끝났습니다.';
                     exList.classList.add('hidden');
+
                 }
             }
 
